src/app/public/sass/_user-slidebar.scss
@charset "utf-8";

.user-sidebar
{
  top: 0;
  right: 0;

  overflow-x: hidden;
  overflow-y: auto;

  // 慣性スクロールを有効にする
  -webkit-overflow-scrolling: touch;

  width: 90%;
  max-width: 600px;
  height: 100%;
  background: white;

  transition: .3s ease;

  // .user-sidebarは最初非表示。画面外に出しておく。
  @include transform(translate3d(100%, 0, 0));

  // .user-sidebarを表示する。
  &--in {
    @include transform(translate3d(0, 0, 0));
  }

  // サイドバー全体を固定化
  &--fixed {
    position: fixed;
    z-index: 10000;

  }

  // フォローボタンはスクロールしても上部に固定するために用意。
  &__header {

  }

  &__controll
  {
    top: 0px;
    right: 0px;
    background: rgba(255, 255, 255, 0.9);
    position: fixed;
    z-index: 10001;
    max-width: 600px;
    width: 100%;
    padding: 20px 30px 0;

    transition: .3s ease;

    &--in {
      transform: translate3d(0,0,0);
    }

    &--out {
      // @include transform(translate3d(100%, 0, 0));
      display: none;
    }

    & .btn {
      margin-top: 10px;
      margin-right: 5px;
    }

  }

  &__btn-follow
  {
    &:hover
    {
      color: white;
      background-color: $label__follow-color;
    }
  }


  &__icon-all-view:before {
    content: "イラストを全て見る";
  }

  &__contents
  {
    // width: 620px;
    width: 100%;
    margin: 0 auto;
    padding: 0;
  }

  &__profile
  {
    width: 100%;
    // min-height: 150px;
    padding: 100px 30px 20px;

    color: $sidebar-color;

    &--name
    {
      color: $base-color;
    }


    &--description
    {
      font-size: .8em;
      line-height: 1.8;

      padding-top: 20px;
    }

    &--url
    {
      font-size: .7em;
      line-height: 1.8;

      padding-top: 5px;
      i {
        color: $link-color;
        margin-right: 5px;
      }
    }

    &__icon
    {
      width: 64px;
      height: 64px;
      margin: 0 auto;

      @include round(4px);
      img
      {
        max-width: 64px;

        border-radius: 3px;
      }
    }
  }


  &__post
  {
    margin: 20px 30px;

    @include zurui-box(.3);
  }


  &__contents--infinitescroll-message
  {
    margin: 0 auto;
  }

  &__contents--box-loading-init
  {
    padding: 0 20px 20px;
  }

}


@media(max-width: 480px)
{
  .user-sidebar__post--header--link
  {
    // アイコン表示がない分を相殺
    margin-left: 0;
  }

  .user-sidebar
  {
    font-size: $font-size-percent-smartphone;
    padding: 88px 0 0 0;
  }

  .user-sidebar__profile {
    padding: $timeline__post--padding-horizontal;
    // min-height: 100px;
  }

  .user-sidebar__profile--description {
      padding-top: 25px;
  }

  .user-sidebar__post
  {
    margin: 20px $timeline__post--padding-horizontal;
  }

  /**
   * プロフィール群
   */
  .user-sidebar__controll
  {
    // padding: 10px 60px 0 0;
    width: 90%;
    padding: 15px;
    min-height: 0px;
  }

  .media .thumbnail-img
  {
    max-width: 48px;
  }

  .media .media-body
  {
    padding-left: 0;  // reset
  }

  .media-heading
  {
    font-size: $font-size-percent-smartphone;
  }

  .btn-follow  {
    margin: 0;
  }

  .user-sidebar__icon-all-view:before {
    content: "全て見る";
  }

  .user-sidebar__profile--description {
    padding-top: 8px;
  }
}

